<resources>
    <string name="app_name" translatable="false">Android-ui</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_trending" translatable="false">Trending</string>
    <string name="title_subscriptions" translatable="false">Subscriptions</string>
    <string name="title_activity" translatable="false">Activity</string>
    <string name="title_library" translatable="false">Library</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="title_toolbars">Toolbars</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="content">1月13日，中广核在官方微信上称，国家发改委复函已同意其申报的ACPR50S海洋核动力平台纳入能源科技创新“十三五”规划。此次海上小型堆ACPR50S的正式立项，标志着中广核海上小型核反应堆研发取得突破性进展。
    中广核称表示，公司正在开展ACPR50S小型堆示范项目的初步设计工作，预计2017年启动示范项目建设，2020年将建成发电。
    中广核要建海上核电站：哪里缺电去哪里
    核电小型堆，相对百万核电大机组而言，功率较小，多为模块化设计、建设，具有高安全性、小身型、灵活性等特点。发电只是其众多用途中之一，其还可进行工业供热供汽、城市供暖、海水淡化和海洋开发等等。
    ACPR50S是中广核自主研发、自主设计的海上小型堆技术，单堆热功率为20万千瓦，相当于沿海百万千瓦核电大机组的1/5。该技术可为海上油气田开采、海岛开发等领域的供电、供热和海水淡化提供可靠、稳定的电力，与海上常规能源相比较，具有竞争力。
    该技术在去年6月，已经从设计研发阶段转变到设备制造技术落实阶段。为保证后期相关工程项目的设备供货，2015年6月，中广核旗下的中科华核电技术研究院有限公司，已经与上海电气核电设备有限公司、上海电气凯士比核电泵阀有限公司、上海第一机床厂有限公司、上海交通大学等九家单位签订了ACPR系列小型压水核反应堆关键设备合作协议。
    示范项目建成后，ACPR50S有望批量化建设。
    此外，中广核透露，除了海上小型堆技术外，目前还在研制陆上小型堆技术ACPR100，单堆热功率为45万千瓦，可作为百万千瓦级大型核电机组的补充。主要应用区域为大型工业园区、偏远山区等领域。
    中广核相关负责人表示，中广核海上和陆上小型堆的研发及后续示范项目的建设，将形成与百万千瓦级大型核电站互为补充的格局，为中国绿色发展和海洋强国建设提供更为多样的能源选择。
    事实上，除了中广核，另一核电大佬中国核工业集团（下称中核）也早就将目光瞄准在小型堆技术上。其主推的技术为ACP100，设计采用完全非能动的安全设施。
    2015年6月，《中国能源报》报道，中核用于海上石油开采方案的浮动式核电站ACP100S也已完成总体方案设计，设计、试验、关键设备研制等环节均已贯通，可很快具备工程应用条件。
    按照中核当初的计划，ACP100S将在2016年完成工程初步设计，并争取工程开工，2017年，要完成工程主系统施工设计，船体下水。到2019年，电站建造调试完成，并投入运行。
    去年10月，中核下属的中国核动力研究设计院还与英国劳氏船级社签订了框架协议，共同设计开发利用小型核反应堆建造海上浮动核电站。根据双方签订的框架协议，共同开发的“浮动核反应堆首堆”，将为中国离岸开发提供电力支持。1月13日，中广核在官方微信上称，国家发改委复函已同意其申报的ACPR50S海洋核动力平台纳入能源科技创新“十三五”规划。此次海上小型堆ACPR50S的正式立项，标志着中广核海上小型核反应堆研发取得突破性进展。
    中广核称表示，公司正在开展ACPR50S小型堆示范项目的初步设计工作，预计2017年启动示范项目建设，2020年将建成发电。
    中广核要建海上核电站：哪里缺电去哪里
    核电小型堆，相对百万核电大机组而言，功率较小，多为模块化设计、建设，具有高安全性、小身型、灵活性等特点。发电只是其众多用途中之一，其还可进行工业供热供汽、城市供暖、海水淡化和海洋开发等等。
    ACPR50S是中广核自主研发、自主设计的海上小型堆技术，单堆热功率为20万千瓦，相当于沿海百万千瓦核电大机组的1/5。该技术可为海上油气田开采、海岛开发等领域的供电、供热和海水淡化提供可靠、稳定的电力，与海上常规能源相比较，具有竞争力。
    该技术在去年6月，已经从设计研发阶段转变到设备制造技术落实阶段。为保证后期相关工程项目的设备供货，2015年6月，中广核旗下的中科华核电技术研究院有限公司，已经与上海电气核电设备有限公司、上海电气凯士比核电泵阀有限公司、上海第一机床厂有限公司、上海交通大学等九家单位签订了ACPR系列小型压水核反应堆关键设备合作协议。
    示范项目建成后，ACPR50S有望批量化建设。
    此外，中广核透露，除了海上小型堆技术外，目前还在研制陆上小型堆技术ACPR100，单堆热功率为45万千瓦，可作为百万千瓦级大型核电机组的补充。主要应用区域为大型工业园区、偏远山区等领域。
    中广核相关负责人表示，中广核海上和陆上小型堆的研发及后续示范项目的建设，将形成与百万千瓦级大型核电站互为补充的格局，为中国绿色发展和海洋强国建设提供更为多样的能源选择。
    事实上，除了中广核，另一核电大佬中国核工业集团（下称中核）也早就将目光瞄准在小型堆技术上。其主推的技术为ACP100，设计采用完全非能动的安全设施。
    2015年6月，《中国能源报》报道，中核用于海上石油开采方案的浮动式核电站ACP100S也已完成总体方案设计，设计、试验、关键设备研制等环节均已贯通，可很快具备工程应用条件。
    按照中核当初的计划，ACP100S将在2016年完成工程初步设计，并争取工程开工，2017年，要完成工程主系统施工设计，船体下水。到2019年，电站建造调试完成，并投入运行。
    去年10月，中核下属的中国核动力研究设计院还与英国劳氏船级社签订了框架协议，共同设计开发利用小型核反应堆建造海上浮动核电站。根据双方签订的框架协议，共同开发的“浮动核反应堆首堆”，将为中国离岸开发提供电力支持。1月13日，中广核在官方微信上称，国家发改委复函已同意其申报的ACPR50S海洋核动力平台纳入能源科技创新“十三五”规划。此次海上小型堆ACPR50S的正式立项，标志着中广核海上小型核反应堆研发取得突破性进展。
    中广核称表示，公司正在开展ACPR50S小型堆示范项目的初步设计工作，预计2017年启动示范项目建设，2020年将建成发电。
    中广核要建海上核电站：哪里缺电去哪里
    核电小型堆，相对百万核电大机组而言，功率较小，多为模块化设计、建设，具有高安全性、小身型、灵活性等特点。发电只是其众多用途中之一，其还可进行工业供热供汽、城市供暖、海水淡化和海洋开发等等。
    ACPR50S是中广核自主研发、自主设计的海上小型堆技术，单堆热功率为20万千瓦，相当于沿海百万千瓦核电大机组的1/5。该技术可为海上油气田开采、海岛开发等领域的供电、供热和海水淡化提供可靠、稳定的电力，与海上常规能源相比较，具有竞争力。
    该技术在去年6月，已经从设计研发阶段转变到设备制造技术落实阶段。为保证后期相关工程项目的设备供货，2015年6月，中广核旗下的中科华核电技术研究院有限公司，已经与上海电气核电设备有限公司、上海电气凯士比核电泵阀有限公司、上海第一机床厂有限公司、上海交通大学等九家单位签订了ACPR系列小型压水核反应堆关键设备合作协议。
    示范项目建成后，ACPR50S有望批量化建设。
    此外，中广核透露，除了海上小型堆技术外，目前还在研制陆上小型堆技术ACPR100，单堆热功率为45万千瓦，可作为百万千瓦级大型核电机组的补充。主要应用区域为大型工业园区、偏远山区等领域。
    中广核相关负责人表示，中广核海上和陆上小型堆的研发及后续示范项目的建设，将形成与百万千瓦级大型核电站互为补充的格局，为中国绿色发展和海洋强国建设提供更为多样的能源选择。
    事实上，除了中广核，另一核电大佬中国核工业集团（下称中核）也早就将目光瞄准在小型堆技术上。其主推的技术为ACP100，设计采用完全非能动的安全设施。
    2015年6月，《中国能源报》报道，中核用于海上石油开采方案的浮动式核电站ACP100S也已完成总体方案设计，设计、试验、关键设备研制等环节均已贯通，可很快具备工程应用条件。
    按照中核当初的计划，ACP100S将在2016年完成工程初步设计，并争取工程开工，2017年，要完成工程主系统施工设计，船体下水。到2019年，电站建造调试完成，并投入运行。
    去年10月，中核下属的中国核动力研究设计院还与英国劳氏船级社签订了框架协议，共同设计开发利用小型核反应堆建造海上浮动核电站。根据双方签订的框架协议，共同开发的“浮动核反应堆首堆”，将为中国离岸开发提供电力支持。1月13日，中广核在官方微信上称，国家发改委复函已同意其申报的ACPR50S海洋核动力平台纳入能源科技创新“十三五”规划。此次海上小型堆ACPR50S的正式立项，标志着中广核海上小型核反应堆研发取得突破性进展。
    中广核称表示，公司正在开展ACPR50S小型堆示范项目的初步设计工作，预计2017年启动示范项目建设，2020年将建成发电。
    中广核要建海上核电站：哪里缺电去哪里
    核电小型堆，相对百万核电大机组而言，功率较小，多为模块化设计、建设，具有高安全性、小身型、灵活性等特点。发电只是其众多用途中之一，其还可进行工业供热供汽、城市供暖、海水淡化和海洋开发等等。
    ACPR50S是中广核自主研发、自主设计的海上小型堆技术，单堆热功率为20万千瓦，相当于沿海百万千瓦核电大机组的1/5。该技术可为海上油气田开采、海岛开发等领域的供电、供热和海水淡化提供可靠、稳定的电力，与海上常规能源相比较，具有竞争力。
    该技术在去年6月，已经从设计研发阶段转变到设备制造技术落实阶段。为保证后期相关工程项目的设备供货，2015年6月，中广核旗下的中科华核电技术研究院有限公司，已经与上海电气核电设备有限公司、上海电气凯士比核电泵阀有限公司、上海第一机床厂有限公司、上海交通大学等九家单位签订了ACPR系列小型压水核反应堆关键设备合作协议。
    示范项目建成后，ACPR50S有望批量化建设。
    此外，中广核透露，除了海上小型堆技术外，目前还在研制陆上小型堆技术ACPR100，单堆热功率为45万千瓦，可作为百万千瓦级大型核电机组的补充。主要应用区域为大型工业园区、偏远山区等领域。
    中广核相关负责人表示，中广核海上和陆上小型堆的研发及后续示范项目的建设，将形成与百万千瓦级大型核电站互为补充的格局，为中国绿色发展和海洋强国建设提供更为多样的能源选择。
    事实上，除了中广核，另一核电大佬中国核工业集团（下称中核）也早就将目光瞄准在小型堆技术上。其主推的技术为ACP100，设计采用完全非能动的安全设施。
    2015年6月，《中国能源报》报道，中核用于海上石油开采方案的浮动式核电站ACP100S也已完成总体方案设计，设计、试验、关键设备研制等环节均已贯通，可很快具备工程应用条件。
    按照中核当初的计划，ACP100S将在2016年完成工程初步设计，并争取工程开工，2017年，要完成工程主系统施工设计，船体下水。到2019年，电站建造调试完成，并投入运行。
    去年10月，中核下属的中国核动力研究设计院还与英国劳氏船级社签订了框架协议，共同设计开发利用小型核反应堆建造海上浮动核电站。根据双方签订的框架协议，共同开发的“浮动核反应堆首堆”，将为中国离岸开发提供电力支持。1月13日，中广核在官方微信上称，国家发改委复函已同意其申报的ACPR50S海洋核动力平台纳入能源科技创新“十三五”规划。此次海上小型堆ACPR50S的正式立项，标志着中广核海上小型核反应堆研发取得突破性进展。
    中广核称表示，公司正在开展ACPR50S小型堆示范项目的初步设计工作，预计2017年启动示范项目建设，2020年将建成发电。
    中广核要建海上核电站：哪里缺电去哪里
    核电小型堆，相对百万核电大机组而言，功率较小，多为模块化设计、建设，具有高安全性、小身型、灵活性等特点。发电只是其众多用途中之一，其还可进行工业供热供汽、城市供暖、海水淡化和海洋开发等等。
    ACPR50S是中广核自主研发、自主设计的海上小型堆技术，单堆热功率为20万千瓦，相当于沿海百万千瓦核电大机组的1/5。该技术可为海上油气田开采、海岛开发等领域的供电、供热和海水淡化提供可靠、稳定的电力，与海上常规能源相比较，具有竞争力。
    该技术在去年6月，已经从设计研发阶段转变到设备制造技术落实阶段。为保证后期相关工程项目的设备供货，2015年6月，中广核旗下的中科华核电技术研究院有限公司，已经与上海电气核电设备有限公司、上海电气凯士比核电泵阀有限公司、上海第一机床厂有限公司、上海交通大学等九家单位签订了ACPR系列小型压水核反应堆关键设备合作协议。
    示范项目建成后，ACPR50S有望批量化建设。
    此外，中广核透露，除了海上小型堆技术外，目前还在研制陆上小型堆技术ACPR100，单堆热功率为45万千瓦，可作为百万千瓦级大型核电机组的补充。主要应用区域为大型工业园区、偏远山区等领域。
    中广核相关负责人表示，中广核海上和陆上小型堆的研发及后续示范项目的建设，将形成与百万千瓦级大型核电站互为补充的格局，为中国绿色发展和海洋强国建设提供更为多样的能源选择。
    事实上，除了中广核，另一核电大佬中国核工业集团（下称中核）也早就将目光瞄准在小型堆技术上。其主推的技术为ACP100，设计采用完全非能动的安全设施。
    2015年6月，《中国能源报》报道，中核用于海上石油开采方案的浮动式核电站ACP100S也已完成总体方案设计，设计、试验、关键设备研制等环节均已贯通，可很快具备工程应用条件。
    按照中核当初的计划，ACP100S将在2016年完成工程初步设计，并争取工程开工，2017年，要完成工程主系统施工设计，船体下水。到2019年，电站建造调试完成，并投入运行。
    去年10月，中核下属的中国核动力研究设计院还与英国劳氏船级社签订了框架协议，共同设计开发利用小型核反应堆建造海上浮动核电站。根据双方签订的框架协议，共同开发的“浮动核反应堆首堆”，将为中国离岸开发提供电力支持。</string>
    <string name="title_activity_kolin">KolinActivity</string>
    <string name="title_activity_fonts">FontsActivity</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
