<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/progress_circular_ic"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_trending"
        android:icon="@drawable/progress_circular_ic"
        android:title="@string/title_trending" />

    <item
        android:id="@+id/navigation_subscriptions"
        android:icon="@drawable/progress_circular_ic"
        android:title="@string/title_subscriptions" />

    <item
        android:id="@+id/navigation_activity"
        android:icon="@drawable/progress_circular_ic"
        android:title="@string/title_activity" />

    <item
        android:id="@+id/navigation_library"
        android:icon="@drawable/progress_circular_ic"
        android:title="@string/title_library" />

</menu>
